# pre-commit-hooks

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml
custom-hooks/: pyproject.toml
custom-hooks/src/custom_hooks/: check_version_bumped.py
src/custom_hooks/: check_version_bumped.py  copyright_checker.py  only_module_imports.py  utils.py
test/: conftest.py  test_check_version_bumped.py  test_copyright_checker.py  test_only_module_imports.py
